Fix navigation bar wrapping on smaller screen sizes (#528)
Nav bar shrinks to mobile version before wrapping onto new line

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -6,6 +6,7 @@
 $color-accent-background: #f0f5f7;
 $color-accent: #e95420;
 $breakpoint-medium: 619px;
+$breakpoint-large: 1220px;
 
 @import "vanilla-framework/scss/vanilla";
 
